// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config.sideLoadViews boolean 1`] = `
Object {
  "devServer": Object {
    "contentBase": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "port": 8080,
    "public": "localhost:8080",
    "publicPath": "/assets/",
    "watchOptions": Object {
      "ignored": "**/node_modules/**",
    },
  },
  "entry": Object {},
  "mode": "development",
  "output": Object {
    "path": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "publicPath": "/assets/",
  },
}
`;

exports[`config.sideLoadViews boolean 2`] = `
Object {
  "devServer": Object {
    "contentBase": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "port": 8080,
    "public": "localhost:8080",
    "publicPath": "/assets/",
    "watchOptions": Object {
      "ignored": "**/node_modules/**",
    },
  },
  "entry": Object {
    "views/layouts/application": Array [
      "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/application.css",
      "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/application.js",
    ],
    "views/layouts/no_side": Array [
      "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/no_side.css",
    ],
    "views/pages/_header": Array [
      "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/_header.css",
    ],
    "views/pages/_post": Array [
      "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/_post.css",
    ],
    "views/pages/home": Array [
      "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/home.css",
    ],
  },
  "mode": "development",
  "output": Object {
    "path": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "publicPath": "/assets/",
  },
}
`;

exports[`config.sideLoadViews existing entry prop 1`] = `
Object {
  "some/path": "some/path.js",
  "views/layouts/application": Array [
    "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/application.css",
    "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/application.js",
  ],
  "views/layouts/no_side": Array [
    "/Users/joelmoss/dev/frails/test/dummy/app/views/layouts/no_side.css",
  ],
  "views/pages/_header": Array [
    "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/_header.css",
  ],
  "views/pages/_post": Array [
    "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/_post.css",
  ],
  "views/pages/home": Array [
    "/Users/joelmoss/dev/frails/test/dummy/app/views/pages/home.css",
  ],
}
`;
